[package]
name = "oauth_gateway"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["full"] }
hyper = { version = "0.14.11", features = ["full"] }
reqwest = { version = "0.11.4", features = ["stream"] }
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.42"
openidconnect = "2.1.0"
oauth2 = "4.1.0"
lazy_static = "1.4.0"
regex = "1.5.4"
