[package]
name = "oauth_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
hyper = { version = "0.14.16", features = ["full"] }
reqwest = { version = "0.11.9", features = ["stream"] }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.53"
openidconnect = "2.2.0"
oauth2 = "4.1.0"
lazy_static = "1.4.0"
regex = "1.5.4"
serde-value = "0.7.0"
futures = "0.3.19"
tower = { version = "0.4.11", features = ["util"] }
tokio-rustls = "0.23.2"
rustls = "0.20.2"
rustls-pemfile = "0.2.1"
async-shutdown = "0.1.2"
webpki = "0.22.0"
unicase = "2.6.0"
parking_lot = "0.11.2"
